--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="intro_title">Introductionnnn</string>
+    <string name="intro_title">Introduction</string>
 
 
     <string name="number_one">1</string>
